<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sixty Seconds</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bucketdesc">The magical bucket helps to collect more water</string>
    <string name="bigdropdesc">Collect more water from this power and get 10 points for each drop</string>
    <string name="crystaldesc">Crystal reduces the speed of falling drops and helps in collecting water </string>
    <string name="snowdesc">Unleashes a bunch of snowballs with 10 points each</string>
    <string name="multiplierdesc">Doubles the score by 2</string>
    <string name="endlessdesc">Unlock the final endless quest and join the world leaderboard</string>





</resources>
